Update the last employeer year

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <div class="job-container">
               <div class="row job-date-company">
                 <div class="col-xl-3 col-lg-6 job-effective-date">
-                  March 2018 - Present
+                  March 2018 - March 2020
                 </div>
                 <div class="col-xl-9 col-lg-6 job-company">
                   <a href="http://intellis.com.au/" target="_blank">Intellis</a>
