Update the text. for lemon tech,

--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
               <ul>
                 <li>
                   Building and creating new modules for generating necessary
-                  data for each page such us user profile page, reports page,
-                  dashboard and live notifications.
+                  data for each page such as user profile page, reports page,
+                  dashboard, and live notifications.
                 </li>
-                <li>Code enchancements for the other modules or page.</li>
+                <li>Code enhancements for the other modules and pages.</li>
               </ul>
             </div>
 
