Update on layout

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="col-md-2 col-sm-2 fa-icon">
               <i class="las la-envelope icon"></i>
             </div>
-            <div class="col-md-10 col-sm-10 detail-wrapper">
+            <div class="col-md-10 col-sm-10 detail-wrapper" style="overflow: hidden;">
               rhonnel_cordova@yahoo.com
             </div>
           </div>
@@ -84,7 +84,7 @@
           <hr class="bar-white" />
 
           <div class="about-content">
-            Hello, I'm <i> Rhonnel Cordova </i> a software developer from the Philippines, I've been in the industry
+            Hello, I'm <i> Rhonnel Cordova </i> a web developer from the Philippines, I've been in the industry
             since 2015
             after
             graduating from college.
